Modified environment array formatting

--- a/compose.yml
+++ b/compose.yml
@@ -12,7 +12,7 @@ services:
       - CHECK_INTERVAL
       - KEEP_THIRD_PARTY_PCIE_CARD_COOLING_RESPONSE_STATE_ON_EXIT
       - ${DISABLE_THIRD_PARTY_PCIE_CARD_DELL_DEFAULT_COOLING_RESPONSE:-"DISABLE_THIRD_PARTY_PCIE_CARD_DELL_DEFAULT_COOLING_RESPONSE=true"}
-      ${LOCAL_IPMI-"- IDRAC_USERNAME=${IDRAC_USERNAME:-root}"}
-      ${LOCAL_IPMI-"- IDRAC_PASSWORD=${IDRAC_PASSWORD:?error}"}
+      - ${LOCAL_IPMI-"IDRAC_USERNAME=${IDRAC_USERNAME:-root}"}
+      - ${LOCAL_IPMI-"IDRAC_PASSWORD=${IDRAC_PASSWORD:?error}"}
     ${LOCAL_IPMI+"devices:"}
       ${LOCAL_IPMI+"- /dev/ipmi0:/dev/ipmi0:rw"}
